<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
>

    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="match_parent"
                                                       tools:context=".PersegiPFragment">
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/numPanjangP" android:hint="@string/hint_panjang"
                android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/numLebarP" android:hint="@string/hint_lebar"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/numPanjangP"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"/>
        <Button
                android:text="@string/btn_hitung"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btnHitungPersegiP"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/numLebarP"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"/>
        <TextView
                android:text="@string/tv_luas_bd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/luasP"
                app:layout_constraintTop_toBottomOf="@+id/btnHitungPersegiP" android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:layout_marginLeft="24dp"/>
        <TextView
                android:text="@string/tv_keliling_bd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/KelilingP"
                app:layout_constraintTop_toBottomOf="@+id/luasP" android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:layout_marginLeft="24dp"/>
        <Button
                android:text="@string/btn_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btnshareP"
                app:layout_constraintTop_toBottomOf="@+id/KelilingP" android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
